[gd_scene load_steps=6 format=3 uid="uid://sskysvg62020"]

[ext_resource type="Script" path="res://scenes/game_ui/game_ui.gd" id="1_85fsx"]
[ext_resource type="LabelSettings" uid="uid://c5h5f5q1cj5wu" path="res://LG_white_32.tres" id="1_b747k"]
[ext_resource type="FontFile" uid="uid://xc2wjc405v1j" path="res://assets/fonts/LuckiestGuy-Regular.ttf" id="2_8f3it"]
[ext_resource type="LabelSettings" uid="uid://6f2iy72hf3i7" path="res://LG_green_48.tres" id="2_ri64q"]

[sub_resource type="LabelSettings" id="LabelSettings_u6c3q"]
font = ExtResource("2_8f3it")
font_size = 72
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_85fsx")

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="ScoreLabel" type="Label" parent="MC"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "0 / 100"
label_settings = ExtResource("1_b747k")
vertical_alignment = 1

[node name="ExitLabel" type="Label" parent="MC"]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "GO TO EXIT!!!"
label_settings = ExtResource("2_ri64q")
vertical_alignment = 1

[node name="TimeLabel" type="Label" parent="MC"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "1000s"
label_settings = ExtResource("1_b747k")
vertical_alignment = 1

[node name="GameOver" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="GameOverLabel" type="Label" parent="GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.5
offset_top = -16.5
offset_right = 126.5
offset_bottom = 16.5
grow_horizontal = 2
grow_vertical = 2
text = "Mission Success!"
label_settings = SubResource("LabelSettings_u6c3q")
horizontal_alignment = 1
vertical_alignment = 1
